Step 2: wine quality EDA (target distribution and correlations)

--- a/notebooks/01_wine_quality_eda.ipynb
+++ b/notebooks/01_wine_quality_eda.ipynb
@@ -493,8 +493,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "a41d5228-e090-4044-baea-8f0b18207aa3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(0)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wine_quality.duplicated().sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ef81cf3b-55a4-4c26-bd8b-32561b302033",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(0)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wine_quality.duplicated().sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "8350de9d-c9b6-4109-b61d-58008a5d53f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "quality                 1.000000\n",
+       "alcohol                 0.484866\n",
+       "sulphates               0.257710\n",
+       "citric acid             0.240821\n",
+       "fixed acidity           0.121970\n",
+       "Id                      0.069708\n",
+       "residual sugar          0.022002\n",
+       "pH                     -0.052453\n",
+       "free sulfur dioxide    -0.063260\n",
+       "chlorides              -0.124085\n",
+       "density                -0.175208\n",
+       "total sulfur dioxide   -0.183339\n",
+       "volatile acidity       -0.407394\n",
+       "Name: quality, dtype: float64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corr = wine_quality.corr(numeric_only=True)\n",
+    "corr[\"quality\"].sort_values(ascending=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "652c74d7-5ef2-43a9-a324-7480ec9b0b39",
    "metadata": {},
    "outputs": [],
    "source": []
