--- a/notebooks/05_risk_calculator.ipynb
+++ b/notebooks/05_risk_calculator.ipynb
@@ -1,12 +1,501 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "c4bbe3d5",
+   "metadata": {},
+   "source": [
+    "# 05 — Wine Risk Calculator (Low Technical Quality)\n",
+    "\n",
+    "This notebook builds a **risk calculator** that predicts the probability that a wine will have **low technical quality** using chemical composition.\n",
+    "\n",
+    "**Risk definition (binary target)**\n",
+    "\n",
+    "- `risk = 1` if `quality ≤ 5` (High risk: low quality)\n",
+    "- `risk = 0` if `quality > 5` (Low risk)\n",
+    "\n",
+    "**Business objective**\n",
+    "\n",
+    "- Minimize **false negatives** (missing a low-quality wine is more costly than raising a false alarm).\n",
+    "- Use **calibrated probabilities** and a **recall-oriented threshold**.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Outputs\n",
+    "\n",
+    "- `predict_risk()` function:\n",
+    "  - returns calibrated probability of **High risk**\n",
+    "  - returns risk label (`\"High risk\"` / `\"Low risk\"`)\n",
+    "  - returns decision threshold used\n",
+    "- Example scenarios (3–5 hypothetical wines)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2fd982b1-af94-4a40-a062-b976105890fe",
+   "execution_count": 1,
+   "id": "24f319c3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# --- Imports\n",
+    "import os\n",
+    "import json\n",
+    "import joblib\n",
+    "import yaml\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from typing import Dict, Any, Tuple\n",
+    "\n",
+    "pd.set_option(\"display.max_columns\", 50)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55e97aa7",
+   "metadata": {},
+   "source": [
+    "## 1) Load configuration\n",
+    "\n",
+    "We load file paths from `config.yaml` to avoid hardcoded paths."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "52872be9",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '../config.yaml'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# --- Load config.yaml\u001b[39;00m\n\u001b[0;32m      2\u001b[0m CONFIG_PATH \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../config.yaml\u001b[39m\u001b[38;5;124m\"\u001b[39m  \u001b[38;5;66;03m# notebook lives in notebooks/\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(CONFIG_PATH, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m      4\u001b[0m     config \u001b[38;5;241m=\u001b[39m yaml\u001b[38;5;241m.\u001b[39msafe_load(f)\n\u001b[0;32m      6\u001b[0m config\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:324\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    317\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[0;32m    318\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    319\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    320\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    321\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    322\u001b[0m     )\n\u001b[1;32m--> 324\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m io_open(file, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../config.yaml'"
+     ]
+    }
+   ],
+   "source": [
+    "# --- Load config.yaml\n",
+    "CONFIG_PATH = \"../config.yaml\"  # notebook lives in notebooks/\n",
+    "with open(CONFIG_PATH, \"r\") as f:\n",
+    "    config = yaml.safe_load(f)\n",
+    "\n",
+    "config"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "550fe1f0",
+   "metadata": {},
+   "source": [
+    "## 2) Load trained artifacts\n",
+    "\n",
+    "We load:\n",
+    "\n",
+    "- Calibrated model pipeline (Logistic Regression + preprocessing + calibration)\n",
+    "- Saved threshold(s) for risk decisioning\n",
+    "\n",
+    "Artifacts are expected to exist from `04_risk_modeling.ipynb`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4b919bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Resolve artifact paths\n",
+    "# Expected keys in config.yaml (recommended):\n",
+    "#   artifacts:\n",
+    "#     calibrated_model_path: \"models/logreg_risk_pipeline_calibrated.joblib\"\n",
+    "#     thresholds_path: \"models/risk_thresholds.joblib\"\n",
+    "#\n",
+    "# If your config uses different keys, update this mapping.\n",
+    "\n",
+    "def _get_artifact_path(cfg: dict, key: str, fallback: str) -> str:\n",
+    "    # Looks for cfg[\"artifacts\"][key], else returns fallback\n",
+    "    return cfg.get(\"artifacts\", {}).get(key, fallback)\n",
+    "\n",
+    "CALIBRATED_MODEL_PATH = _get_artifact_path(\n",
+    "    config, \"calibrated_model_path\", \"../models/logreg_risk_pipeline_calibrated.joblib\"\n",
+    ")\n",
+    "THRESHOLDS_PATH = _get_artifact_path(\n",
+    "    config, \"thresholds_path\", \"../models/risk_thresholds.joblib\"\n",
+    ")\n",
+    "\n",
+    "CALIBRATED_MODEL_PATH, THRESHOLDS_PATH"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f84e088",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Load artifacts\n",
+    "risk_model = joblib.load(CALIBRATED_MODEL_PATH)\n",
+    "thresholds = joblib.load(THRESHOLDS_PATH)\n",
+    "\n",
+    "type(risk_model), thresholds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24ab33c3",
+   "metadata": {},
+   "source": [
+    "## 3) Define required input schema\n",
+    "\n",
+    "The Wine Quality dataset uses the following features (standard for this dataset):\n",
+    "\n",
+    "- fixed acidity\n",
+    "- volatile acidity\n",
+    "- citric acid\n",
+    "- residual sugar\n",
+    "- chlorides\n",
+    "- free sulfur dioxide\n",
+    "- total sulfur dioxide\n",
+    "- density\n",
+    "- pH\n",
+    "- sulphates\n",
+    "- alcohol\n",
+    "\n",
+    "We provide a helper to validate inputs and enforce consistent column order."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ad26539",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FEATURES = [\n",
+    "    \"fixed acidity\",\n",
+    "    \"volatile acidity\",\n",
+    "    \"citric acid\",\n",
+    "    \"residual sugar\",\n",
+    "    \"chlorides\",\n",
+    "    \"free sulfur dioxide\",\n",
+    "    \"total sulfur dioxide\",\n",
+    "    \"density\",\n",
+    "    \"pH\",\n",
+    "    \"sulphates\",\n",
+    "    \"alcohol\",\n",
+    "]\n",
+    "\n",
+    "def validate_and_build_df(x: Dict[str, Any]) -> pd.DataFrame:\n",
+    "    \"\"\"Validate a single wine input dict and return a 1-row DataFrame in the correct feature order.\"\"\"\n",
+    "    missing = [c for c in FEATURES if c not in x]\n",
+    "    extra = [c for c in x.keys() if c not in FEATURES]\n",
+    "\n",
+    "    if missing:\n",
+    "        raise ValueError(f\"Missing required feature(s): {missing}\")\n",
+    "    if extra:\n",
+    "        raise ValueError(f\"Unexpected feature(s): {extra}. Allowed: {FEATURES}\")\n",
+    "\n",
+    "    # Convert to numeric and build dataframe\n",
+    "    row = {c: float(x[c]) for c in FEATURES}\n",
+    "    return pd.DataFrame([row], columns=FEATURES)\n",
+    "\n",
+    "# Quick check\n",
+    "validate_and_build_df({c: 1 for c in FEATURES}).head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b54c3915",
+   "metadata": {},
+   "source": [
+    "## 4) Risk calculator function\n",
+    "\n",
+    "- Uses **calibrated probability**: `P(risk=1 | chemistry)`\n",
+    "- Applies the saved decision threshold (recall-oriented)\n",
+    "- Returns a user-friendly output dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b21ae24c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_operating_threshold(thresholds_obj: Any, default: float = 0.5) -> float:\n",
+    "    \"\"\"Extract the chosen threshold from the saved thresholds artifact.\"\"\"\n",
+    "    # Common patterns: dict with a key like \"selected_threshold\" or \"threshold\"\n",
+    "    if isinstance(thresholds_obj, dict):\n",
+    "        for k in [\"selected_threshold\", \"threshold\", \"best_threshold\", \"recall_threshold\"]:\n",
+    "            if k in thresholds_obj:\n",
+    "                return float(thresholds_obj[k])\n",
+    "    # If thresholds is a float already\n",
+    "    if isinstance(thresholds_obj, (float, int, np.floating, np.integer)):\n",
+    "        return float(thresholds_obj)\n",
+    "    # If stored as tuple/list (threshold, metrics)\n",
+    "    if isinstance(thresholds_obj, (list, tuple)) and len(thresholds_obj) > 0:\n",
+    "        if isinstance(thresholds_obj[0], (float, int, np.floating, np.integer)):\n",
+    "            return float(thresholds_obj[0])\n",
+    "    return float(default)\n",
+    "\n",
+    "\n",
+    "OPERATING_THRESHOLD = get_operating_threshold(thresholds, default=0.5)\n",
+    "OPERATING_THRESHOLD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0155116d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_risk(\n",
+    "    wine_features: Dict[str, Any],\n",
+    "    model=risk_model,\n",
+    "    threshold: float = OPERATING_THRESHOLD,\n",
+    ") -> Dict[str, Any]:\n",
+    "    \"\"\"Predict low-quality risk using calibrated probabilities.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    wine_features : dict\n",
+    "        A dictionary with the 11 chemical features.\n",
+    "    model : sklearn-compatible pipeline\n",
+    "        Trained pipeline providing predict_proba.\n",
+    "    threshold : float\n",
+    "        Decision threshold for classifying as High risk.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    dict\n",
+    "        - risk_probability: calibrated probability of High risk (risk=1)\n",
+    "        - risk_label: 'High risk' if prob >= threshold else 'Low risk'\n",
+    "        - threshold: threshold used\n",
+    "    \"\"\"\n",
+    "    X = validate_and_build_df(wine_features)\n",
+    "    proba_high_risk = float(model.predict_proba(X)[:, 1][0])\n",
+    "    label = \"High risk\" if proba_high_risk >= threshold else \"Low risk\"\n",
+    "\n",
+    "    return {\n",
+    "        \"risk_probability\": proba_high_risk,\n",
+    "        \"risk_label\": label,\n",
+    "        \"threshold\": float(threshold),\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "# Smoke test\n",
+    "example_input = {\n",
+    "    \"fixed acidity\": 7.4,\n",
+    "    \"volatile acidity\": 0.70,\n",
+    "    \"citric acid\": 0.00,\n",
+    "    \"residual sugar\": 1.9,\n",
+    "    \"chlorides\": 0.076,\n",
+    "    \"free sulfur dioxide\": 11.0,\n",
+    "    \"total sulfur dioxide\": 34.0,\n",
+    "    \"density\": 0.9978,\n",
+    "    \"pH\": 3.51,\n",
+    "    \"sulphates\": 0.56,\n",
+    "    \"alcohol\": 9.4,\n",
+    "}\n",
+    "\n",
+    "predict_risk(example_input)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ddcc5bb",
+   "metadata": {},
+   "source": [
+    "## 5) Batch scoring helper (optional)\n",
+    "\n",
+    "Score multiple wines at once from a list of dicts."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5e0d38f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def score_wines(\n",
+    "    wines: list,\n",
+    "    model=risk_model,\n",
+    "    threshold: float = OPERATING_THRESHOLD\n",
+    ") -> pd.DataFrame:\n",
+    "    \"\"\"Score a list of wine dicts and return a tidy DataFrame.\"\"\"\n",
+    "    rows = []\n",
+    "    for i, w in enumerate(wines, start=1):\n",
+    "        out = predict_risk(w, model=model, threshold=threshold)\n",
+    "        rows.append({\"wine_id\": i, **out, **w})\n",
+    "    df = pd.DataFrame(rows)\n",
+    "    # Put summary columns first\n",
+    "    front = [\"wine_id\", \"risk_probability\", \"risk_label\", \"threshold\"]\n",
+    "    return df[front + FEATURES]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13463ad5",
+   "metadata": {},
+   "source": [
+    "## 6) Example scenarios (3–5 wines)\n",
+    "\n",
+    "These are **hypothetical inputs** intended to demonstrate usage.\n",
+    "\n",
+    "Interpretation note:\n",
+    "- This model estimates **probability of low technical quality** according to the dataset definition.\n",
+    "- It reflects **associations learned from the training data**, not causation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f8c542f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "example_wines = [\n",
+    "    # A) Higher volatile acidity + higher total SO2 + lower alcohol (often higher risk)\n",
+    "    {\n",
+    "        \"fixed acidity\": 7.2,\n",
+    "        \"volatile acidity\": 0.85,\n",
+    "        \"citric acid\": 0.02,\n",
+    "        \"residual sugar\": 2.0,\n",
+    "        \"chlorides\": 0.080,\n",
+    "        \"free sulfur dioxide\": 10.0,\n",
+    "        \"total sulfur dioxide\": 85.0,\n",
+    "        \"density\": 0.9980,\n",
+    "        \"pH\": 3.45,\n",
+    "        \"sulphates\": 0.55,\n",
+    "        \"alcohol\": 9.0,\n",
+    "    },\n",
+    "    # B) Lower volatile acidity + higher alcohol (often lower risk)\n",
+    "    {\n",
+    "        \"fixed acidity\": 7.5,\n",
+    "        \"volatile acidity\": 0.35,\n",
+    "        \"citric acid\": 0.30,\n",
+    "        \"residual sugar\": 2.4,\n",
+    "        \"chlorides\": 0.050,\n",
+    "        \"free sulfur dioxide\": 18.0,\n",
+    "        \"total sulfur dioxide\": 45.0,\n",
+    "        \"density\": 0.9955,\n",
+    "        \"pH\": 3.25,\n",
+    "        \"sulphates\": 0.70,\n",
+    "        \"alcohol\": 12.5,\n",
+    "    },\n",
+    "    # C) Mid-range profile\n",
+    "    {\n",
+    "        \"fixed acidity\": 8.0,\n",
+    "        \"volatile acidity\": 0.55,\n",
+    "        \"citric acid\": 0.20,\n",
+    "        \"residual sugar\": 2.2,\n",
+    "        \"chlorides\": 0.065,\n",
+    "        \"free sulfur dioxide\": 15.0,\n",
+    "        \"total sulfur dioxide\": 60.0,\n",
+    "        \"density\": 0.9968,\n",
+    "        \"pH\": 3.30,\n",
+    "        \"sulphates\": 0.60,\n",
+    "        \"alcohol\": 10.5,\n",
+    "    },\n",
+    "    # D) Higher chlorides + higher total SO2\n",
+    "    {\n",
+    "        \"fixed acidity\": 6.8,\n",
+    "        \"volatile acidity\": 0.65,\n",
+    "        \"citric acid\": 0.10,\n",
+    "        \"residual sugar\": 1.8,\n",
+    "        \"chlorides\": 0.095,\n",
+    "        \"free sulfur dioxide\": 12.0,\n",
+    "        \"total sulfur dioxide\": 95.0,\n",
+    "        \"density\": 0.9982,\n",
+    "        \"pH\": 3.48,\n",
+    "        \"sulphates\": 0.52,\n",
+    "        \"alcohol\": 9.6,\n",
+    "    },\n",
+    "    # E) Higher alcohol + higher sulphates (often protective) with moderate acidity\n",
+    "    {\n",
+    "        \"fixed acidity\": 7.1,\n",
+    "        \"volatile acidity\": 0.40,\n",
+    "        \"citric acid\": 0.25,\n",
+    "        \"residual sugar\": 2.1,\n",
+    "        \"chlorides\": 0.055,\n",
+    "        \"free sulfur dioxide\": 20.0,\n",
+    "        \"total sulfur dioxide\": 50.0,\n",
+    "        \"density\": 0.9959,\n",
+    "        \"pH\": 3.28,\n",
+    "        \"sulphates\": 0.78,\n",
+    "        \"alcohol\": 12.0,\n",
+    "    },\n",
+    "]\n",
+    "\n",
+    "scored = score_wines(example_wines)\n",
+    "scored.sort_values(\"risk_probability\", ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1559361",
+   "metadata": {},
+   "source": [
+    "## 7) Export-ready snippet\n",
+    "\n",
+    "Use this snippet in a script or API:\n",
+    "\n",
+    "- Load artifacts\n",
+    "- Call `predict_risk()` with a JSON-like dict of features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf4871e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "export_snippet = '''\n",
+    "import joblib\n",
+    "import pandas as pd\n",
+    "\n",
+    "risk_model = joblib.load(\"models/logreg_risk_pipeline_calibrated.joblib\")\n",
+    "thresholds = joblib.load(\"models/risk_thresholds.joblib\")\n",
+    "\n",
+    "FEATURES = [\n",
+    "    \"fixed acidity\",\"volatile acidity\",\"citric acid\",\"residual sugar\",\"chlorides\",\n",
+    "    \"free sulfur dioxide\",\"total sulfur dioxide\",\"density\",\"pH\",\"sulphates\",\"alcohol\"\n",
+    "]\n",
+    "\n",
+    "def validate_and_build_df(x):\n",
+    "    missing = [c for c in FEATURES if c not in x]\n",
+    "    if missing:\n",
+    "        raise ValueError(f\"Missing required feature(s): {missing}\")\n",
+    "    row = {c: float(x[c]) for c in FEATURES}\n",
+    "    return pd.DataFrame([row], columns=FEATURES)\n",
+    "\n",
+    "def get_operating_threshold(thresholds_obj, default=0.5):\n",
+    "    if isinstance(thresholds_obj, dict):\n",
+    "        for k in [\"selected_threshold\", \"threshold\", \"best_threshold\", \"recall_threshold\"]:\n",
+    "            if k in thresholds_obj:\n",
+    "                return float(thresholds_obj[k])\n",
+    "    if isinstance(thresholds_obj, (float, int)):\n",
+    "        return float(thresholds_obj)\n",
+    "    return float(default)\n",
+    "\n",
+    "OPERATING_THRESHOLD = get_operating_threshold(thresholds, default=0.5)\n",
+    "\n",
+    "def predict_risk(wine_features, model=risk_model, threshold=OPERATING_THRESHOLD):\n",
+    "    X = validate_and_build_df(wine_features)\n",
+    "    p = float(model.predict_proba(X)[:, 1][0])\n",
+    "    label = \"High risk\" if p >= threshold else \"Low risk\"\n",
+    "    return {\"risk_probability\": p, \"risk_label\": label, \"threshold\": float(threshold)}\n",
+    "'''\n",
+    "print(export_snippet)"
+   ]
   }
  ],
  "metadata": {
